[package]
name = "aol"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/al8n/aol"
homepage = "https://github.com/al8n/aol"
documentation = "https://docs.rs/aol"
description = "Generic purpose append only log implementation."
license = "MIT OR Apache-2.0"
categories = ["data-structures", "database-implementations", "development-tools", "filesystem", "concurrency"]
keywords = ["log", "append-only", "append-only-log", "database", "manifest"]
rust-version = "1.56"

[features]
default = ["std"]
alloc = ["skl/alloc"]
std = ["thiserror", "skl/memmap", "memmap2"]
filelock = ["std", "fs4"]

[dependencies]
bitflags = "2"
crc32fast = "1"
paste = "1"

fs4 = { version = "0.8", optional = true }
memmap2 = { version = "0.9", optional = true }
skl = { version = "0.11", default-features = false, features = ["alloc"], optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = { version = "1", optional = true }

[[test]]
name = "aol"
path = "tests/aol.rs"
required-features = ["std"]

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
