[package]
name = "integration"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
among = "0.1"
aol = { path = "../", features = ["smallvec-wrapper"] }
derive_more = { version = "1", features = ["full"] }
dbutils = "0.9"
either = "1"
smol_str = "0.3"
smallvec-wrapper = "0.1"
thiserror = "1"
paste = "1"
tempfile = "3"
viewit = "0.1.5"
